--- a/web-ui/src/components/youtube_gallery/YoutubeGallery.css
+++ b/web-ui/src/components/youtube_gallery/YoutubeGallery.css
@@ -5,10 +5,10 @@
 
 body {
     background-color: rgb(57, 57, 62);
-    color: rgb(235, 182, 99);
+    color: rgb(192, 149, 31);
 }
 
-a {
+a{
     color: rgb(219, 84, 75);
 }
 
@@ -41,40 +41,43 @@ a {
     overflow: hidden;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "logo  logo  name name name" "tags  tags  desc desc desc" "link  link  why  why  why";
+    grid-template-areas: "logo  logo  name name name"
+                         "tags  tags  desc desc desc"
+                         "link  link  why  why  why";
 }
 
-.logo-image {
+.logo-image{
     grid-area: logo;
     display: grid;
     place-items: center;
 }
 
-.channel-logo {
+.channel-logo{
     border-radius: 50%
 }
 
-.channel-title {
+.channel-title{
     grid-area: name;
     font-weight: bold;
 }
 
-.channel-description {
+.channel-description{
     grid-area: desc;
-    font-weight: lighter;
+    font-size: small;
+    color: rgb(219, 84, 75);
 }
 
-.channel-why {
+.channel-why{
     grid-area: why;
-    font-weight: 300;
+    font-size: small;
 }
 
-.channel-link {
+.channel-link{
     grid-area: link;
     font-weight: lighter;
 }
 
-.channel-tags {
+.channel-tags{
     grid-area: tags;
     display: grid;
     font-weight: lighter;
@@ -85,4 +88,6 @@ a {
     place-items: center;
 }
 
-.tag {}
+.tag:hover{
+    cursor: pointer;
+}
